Updated compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,10 @@ services:
       - "./librenms:/data"
     env_file:
       - "./env/librenms.env"
+    environment:
+      - "DB_NAME=${MYSQL_DATABASE}"
+      - "DB_USER=${MYSQL_USER}"
+      - "DB_PASSWORD=${MYSQL_PASSWORD}"
     restart: always
     networks:
       - proxy
